--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Rock Paper Scissors <h1>
+    <h1>Rock Paper Scissors </h1>
     <div class="choices">
         <div class="choice" id="rock">
             <img src="rock.png">
